--- a/src/components/Pages/ContactMe/ContactMe.scss
+++ b/src/components/Pages/ContactMe/ContactMe.scss
@@ -1,7 +1,15 @@
 @import "../../../config";
 
 .ContactMe {
-  margin-bottom: 5rem;
+  position: relative;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 75vh;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
   &--heading {
     @include heading;
