--- a/src/components/Pages/Home/Home.scss
+++ b/src/components/Pages/Home/Home.scss
@@ -1,11 +1,11 @@
 @import "../../../config";
 
 .Home {
-  position: fixed;
+  position: relative;
   top: 0;
   left: 0;
   display: flex;
-  width: 100vw;
+  width: 100%;
   height: 75vh;
   flex-direction: column;
   justify-content: center;
